[project]
name = "comfyui-sengine"
version = "1.0.0"
description = "ComfyUI plugin for browsing and loading SWORKS_TEAM's klein-9b LoRAs from Civitai"
authors = [
    { name = "SEngine" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
keywords = ["comfyui", "lora", "civitai", "klein-9b", "sworks"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "aiohttp>=3.8.0",
]

[project.urls]
Homepage = "https://github.com/sworks-team/comfyui-sengine"
Repository = "https://github.com/sworks-team/comfyui-sengine"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools.package-data]
"*" = ["web/js/*.js"]
